; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c_VIDEO_SetFramebuffer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_video.c_VIDEO_SetFramebuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32, i32, i8* }

@fbSet = common dso_local global i32 0, align 4
@HorVer = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@regs = common dso_local global i32* null, align 8
@_viReg = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VIDEO_SetFramebuffer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @_CPU_ISR_Disable(i32 %4)
  store i32 1, i32* @fbSet, align 4
  %6 = load i8*, i8** %2, align 8
  store i8* %6, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 5), align 8
  %7 = call i32 @__setFbbRegs(%struct.TYPE_3__* @HorVer, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 4), i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 3), i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 2), i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 1))
  %8 = load i32*, i32** @regs, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 14
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** @_viReg, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 14
  store i32 %10, i32* %12, align 4
  %13 = load i32*, i32** @regs, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 15
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** @_viReg, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 15
  store i32 %15, i32* %17, align 4
  %18 = load i32*, i32** @regs, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 18
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** @_viReg, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 18
  store i32 %20, i32* %22, align 4
  %23 = load i32*, i32** @regs, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 19
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** @_viReg, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 19
  store i32 %25, i32* %27, align 4
  %28 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @HorVer, i32 0, i32 0), align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %51

30:                                               ; preds = %1
  %31 = load i32*, i32** @regs, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 16
  %33 = load i32, i32* %32, align 4
  %34 = load i32*, i32** @_viReg, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 16
  store i32 %33, i32* %35, align 4
  %36 = load i32*, i32** @regs, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 17
  %38 = load i32, i32* %37, align 4
  %39 = load i32*, i32** @_viReg, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 17
  store i32 %38, i32* %40, align 4
  %41 = load i32*, i32** @regs, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 20
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** @_viReg, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 20
  store i32 %43, i32* %45, align 4
  %46 = load i32*, i32** @regs, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 21
  %48 = load i32, i32* %47, align 4
  %49 = load i32*, i32** @_viReg, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 21
  store i32 %48, i32* %50, align 4
  br label %51

51:                                               ; preds = %30, %1
  %52 = load i32, i32* %3, align 4
  %53 = call i32 @_CPU_ISR_Restore(i32 %52)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__setFbbRegs(%struct.TYPE_3__*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
